# text_classifier

./: pyproject.toml  text_classifier.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml
